--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,3 +1,11 @@
 <header class="header">
     <app-logo></app-logo>
+    <div>
+        <button>
+            <p>Sign-Up</p>
+        </button>
+        <button>
+            <p>Login</p>
+        </button>
+    </div>
 </header>
