feat/ created navigation between home,login and register page

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,10 +1,10 @@
 <header class="header">
-    <app-logo></app-logo>
+    <app-logo routerLink='/'></app-logo>
     <div>
-        <button>
+        <button routerLink='/register'>
             <p>Sign-Up</p>
         </button>
-        <button>
+        <button routerLink='/login'>
             <p>Login</p>
         </button>
     </div>
