feat/ added ability to show or hide header according to url

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" *ngIf="showHide">
     <app-logo routerLink='/'></app-logo>
     <div>
         <button routerLink='/register'>
