--- a/src/app/core/login/login.component.html
+++ b/src/app/core/login/login.component.html
@@ -1,1 +1,22 @@
-<p>login works!</p>
+<form action="#" method="post" class="form">
+    <div>
+        <h1 class="login">Login</h1>
+    </div>
+
+    <div>
+        <input type="email" id="inputUsername" name="email" placeholder="Email" required="" />
+        <label htmlFor="inputUsername">Email</label>
+    </div>
+
+    <div>
+        <input type="password" id="inputPassword" name="password" placeholder="Password" required="" />
+        <label htmlFor="inputPassword">Password</label>
+    </div>
+
+    <button class="btn" type="submit">Sign In</button>
+
+    <div>
+        <p class="text"> Don't have account? Then just <a routerLink="/register">Sign Up</a></p>
+
+    </div>
+</form>
