--- a/src/app/shared/post/post.component.html
+++ b/src/app/shared/post/post.component.html
@@ -1,1 +1,17 @@
-<p>post works!</p>
+<div class="post">
+    <div class="username">
+        <img class="avatar" src="../../../assets/avatar.jpg" alt="avatar" />
+        <h3>username</h3>
+    </div>
+    <img class="postImage" alt="post-image" src="https://miro.medium.com/max/1200/1*mk1-6aYaf_Bes1E3Imhc0A.jpeg" />
+    <h4 class="postText"><strong>username</strong>: caption</h4>
+</div>
+
+<div class="post">
+    <div class="username">
+        <img class="avatar" src="../../../assets/avatar.jpg" alt="avatar" />
+        <h3>username</h3>
+    </div>
+    <img class="postImage" alt="post-image" src="https://www.w3schools.com/w3css/img_lights.jpg" />
+    <h4 class="postText"><strong>username</strong>: caption</h4>
+</div>
