--- a/src/app/shared/post/post.component.css
+++ b/src/app/shared/post/post.component.css
@@ -2,7 +2,7 @@
     max-width: 500px;
     border: 2px solid #eeeeee;
     margin: auto;
-    margin-top: 0%;
+    margin-top: 20px;
     margin-bottom: 45px;
 }
 .postImage{
