feat/ added upload page

--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -9,6 +9,12 @@
         </button>
     </div>
     <div *ngIf="isLogged">
+        <button routerLink='/upload'>
+            <p>Upload</p>
+        </button>
+        <button routerLink='/profile'>
+            <p>Profile</p>
+        </button>
         <button routerLink='/search'>
             <p>Search</p>
         </button>
