fix/ fixed names and placeholders

--- a/src/app/core/upload/upload.component.html
+++ b/src/app/core/upload/upload.component.html
@@ -13,12 +13,12 @@
     </div>
 
     <div>
-        <input type="text" id="inputCaption" name="caption" placeholder="Enter a tags" required ngModel/>
-        <label htmlFor="inputCaption">Tags</label>
+        <input type="text" id="inputTags" name="tags" placeholder="Enter a tags" required ngModel/>
+        <label htmlFor="inputTags">Tags</label>
     </div>
 
     <div>
-        <input type="file" id="inputFile" name="password" required />
+        <input type="file" id="inputFile" name="file" required ngModel/>
         <label htmlFor="inputFile">File</label>
     </div>
 
