--- a/src/app/shared/post/post.component.html
+++ b/src/app/shared/post/post.component.html
@@ -1,11 +1,13 @@
 <div class="post" *ngFor="let data of arrayWithData">
-    <div class="username">
-        <img class="avatar" src="../../../assets/avatar.jpg" alt="avatar" />
-        <h3>{{data.username}}</h3>
-    </div>
-    <div *ngIf="loggedEmail===data.email">
-        <button>edit</button>
-        <button>delete</button>
+    <div class="postHeader">
+        <div class="username">
+            <img class="avatar" src="../../../assets/avatar.jpg" alt="avatar" />
+            <h3>{{data.username}}</h3>
+        </div>
+        <div class="buttons" *ngIf="loggedEmail===data.email">
+            <button>edit</button>
+            <button>delete</button>
+        </div>
     </div>
     <a [routerLink]="['/image',data.imgUrl]"><img class="postImage" alt="post-image" [src]="data.imgUrl" /> </a>
     <h4 class="postText"><strong>{{data.username}}</strong>: {{data.caption}}</h4>
