fix/ styling of buttens

--- a/src/app/shared/post/post.component.css
+++ b/src/app/shared/post/post.component.css
@@ -37,3 +37,17 @@
     width: 50px;
     border-radius: 50%;
 }
+.editBtn{
+    background-color: #3ece58;
+    padding: 15px;
+    color: white;
+    border-radius: 15px;
+    border: none;
+}
+.deleteBtn{
+    background-color: #ce4c3e;
+    padding: 15px;
+    color: white;
+    border-radius: 15px;
+    border: none;
+}
